--- a/src/System.Private.Xml/tests/XmlDocument/Performance/System.Xml.XmlDocument.Performance.Tests.csproj
+++ b/src/System.Private.Xml/tests/XmlDocument/Performance/System.Xml.XmlDocument.Performance.Tests.csproj
@@ -1,12 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <ProjectGuid>{8A7370E5-BF89-4BCF-ACCD-BA298869055B}</ProjectGuid>
-    <Configurations>netcoreapp-Debug;netcoreapp-Release</Configurations>
+    <Configurations>netstandard-Debug;netstandard-Release</Configurations>
   </PropertyGroup>
   <Import Project="$(CommonTestPath)\Tests.props" />
-  <PropertyGroup>
-    <IncludePerformanceTests>true</IncludePerformanceTests>
-  </PropertyGroup>
   <ItemGroup>
     <Compile Include="Perf.XmlDocument.cs" />
     <Compile Include="Perf.XmlNode.cs" />
