--- a/src/System.Runtime.Serialization.Xml/tests/Performance/System.Runtime.Serialization.Xml.Performance.Tests.csproj
+++ b/src/System.Runtime.Serialization.Xml/tests/Performance/System.Runtime.Serialization.Xml.Performance.Tests.csproj
@@ -1,9 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <IncludePerformanceTests>true</IncludePerformanceTests>
     <ProjectGuid>{122A5432-C5B7-4293-AFDA-B24F4D54FDEF}</ProjectGuid>
-    <Configurations>netcoreapp-Debug;netcoreapp-Release;netstandard-Debug;netstandard-Release</Configurations>
+    <Configurations>netstandard-Debug;netstandard-Release</Configurations>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="$(CommonTestPath)\System\Runtime\Serialization\Utils.cs" />
