--- a/src/System.Runtime/tests/Performance/System.Runtime.Performance.Tests.csproj
+++ b/src/System.Runtime/tests/Performance/System.Runtime.Performance.Tests.csproj
@@ -2,9 +2,9 @@
   <PropertyGroup>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <NoWarn>1718</NoWarn>
-    <IncludePerformanceTests>true</IncludePerformanceTests>
     <ProjectGuid>{E9560F70-79F5-453A-B518-0292CFE4A6AD}</ProjectGuid>
-    <Configurations>netcoreapp-Debug;netcoreapp-Release</Configurations>
+    <DefineConstants Condition="'$(TargetGroup)' == 'netcoreapp'">$(DefineConstants);netcoreapp</DefineConstants>
+    <Configurations>netstandard-Debug;netstandard-Release;netcoreapp-Debug;netcoreapp-Release</Configurations>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Perf.Array.cs" />
@@ -14,7 +14,6 @@
     <Compile Include="Perf.Double.cs" />
     <Compile Include="Perf.Enum.cs" />
     <Compile Include="Perf.Guid.cs" />
-    <Compile Include="Perf.HashCode.cs" />
     <Compile Include="Perf.Int32.cs" />
     <Compile Include="Perf.Int64.cs" />
     <Compile Include="Perf.IntPtr.cs" />
@@ -30,15 +29,13 @@
     </Compile>
   </ItemGroup>
   <ItemGroup Condition="'$(TargetGroup)' == 'netcoreapp'">
-    <Compile Include="Perf.String.netcoreapp.cs" />
+    <Compile Include="Perf.HashCode.netcoreapp.cs" />
+    <Compile Include="Perf.String.netcoreapp.cs" />    
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="$(CommonPath)\..\perf\PerfRunner\PerfRunner.csproj">
       <Project>{69e46a6f-9966-45a5-8945-2559fe337827}</Project>
       <Name>PerfRunner</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
 </Project>
