--- a/src/System.Collections/tests/Performance/System.Collections.Performance.Tests.csproj
+++ b/src/System.Collections/tests/Performance/System.Collections.Performance.Tests.csproj
@@ -1,9 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <IncludePerformanceTests>true</IncludePerformanceTests>
     <ProjectGuid>{F2B47C9D-477E-4EB2-B7F9-D7563FCED117}</ProjectGuid>
     <DisableTests Condition="'$(TargetGroup)' == 'uap' AND ('$(ArchGroup)' == 'arm' OR '$(ArchGroup)' == 'arm64')">true</DisableTests>
-    <Configurations>netcoreapp-Debug;netcoreapp-Release</Configurations>
+    <Configurations>netstandard-Debug;netstandard-Release</Configurations>
   </PropertyGroup>
   <ItemGroup Condition="'$(DisableTests)' != 'true'">
     <Compile Include="$(CommonTestPath)\System\Collections\DictionaryExtensions.cs">
