Remove 'netfx' conditionals from System.Security.SecureString.csproj

--- a/src/System.Security.SecureString/ref/System.Security.SecureString.csproj
+++ b/src/System.Security.SecureString/ref/System.Security.SecureString.csproj
@@ -2,18 +2,13 @@
   <PropertyGroup>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <ProjectGuid>{899EC05D-7861-447F-9216-67F8547516DD}</ProjectGuid>
-    <DefineConstants Condition="'$(TargetGroup)' == 'netfx'">$(DefineConstants);netfx</DefineConstants>
     <Configurations>netcoreapp-Debug;netcoreapp-Release;uap-Debug;uap-Release</Configurations>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="System.Security.SecureString.cs" />
-    <Compile Condition="'$(TargetGroup)' == 'netfx'" Include="System.Security.SecureString.netfx.cs" />
   </ItemGroup>
-  <ItemGroup Condition="'$(TargetGroup)' != 'netfx'">
+  <ItemGroup>
     <ProjectReference Include="..\..\System.Runtime\ref\System.Runtime.csproj" />
     <ProjectReference Include="..\..\System.Runtime.InteropServices\ref\System.Runtime.InteropServices.csproj" />
-  </ItemGroup>
-  <ItemGroup Condition="'$(TargetGroup)' == 'netfx'">
-    <Reference Include="mscorlib" />
   </ItemGroup>
 </Project>
