--- a/src/System.Xml.XPath.XDocument/ref/System.Xml.XPath.XDocument.csproj
+++ b/src/System.Xml.XPath.XDocument/ref/System.Xml.XPath.XDocument.csproj
@@ -1,18 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <ProjectGuid>{F44BEAB4-EDDB-497B-B15C-11E8DFB94092}</ProjectGuid>
-    <IsPartialFacadeAssembly Condition="'$(TargetGroup)' == 'netfx'">true</IsPartialFacadeAssembly>
     <Configurations>netcoreapp-Debug;netcoreapp-Release;uap-Debug;uap-Release</Configurations>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="System.Xml.XPath.XDocument.cs" />
   </ItemGroup>
-  <ItemGroup Condition="'$(TargetGroup)' == 'netfx'">
-    <Reference Include="mscorlib" />
-    <Reference Include="System.Xml" />
-    <Reference Include="System.Xml.Linq" />
-  </ItemGroup>
-  <ItemGroup Condition="'$(TargetGroup)' != 'netfx'">
+  <ItemGroup>
     <ProjectReference Include="..\..\System.Runtime\ref\System.Runtime.csproj" />
     <ProjectReference Include="..\..\System.Xml.XDocument\ref\System.Xml.XDocument.csproj" />
     <ProjectReference Include="..\..\System.Xml.XPath\ref\System.Xml.XPath.csproj" />
