Initial commit, just ot get all the files on Server, this does not compile

--- a/src/Microsoft.VisualBasic/src/Microsoft.VisualBasic.vbproj
+++ b/src/Microsoft.VisualBasic/src/Microsoft.VisualBasic.vbproj
@@ -42,6 +42,7 @@
     <Compile Include="Microsoft\VisualBasic\CompilerServices\Utils.LateBinder.vb" />
     <Compile Include="Microsoft\VisualBasic\CompilerServices\Utils.vb" />
     <Compile Include="Microsoft\VisualBasic\CompilerServices\Versioned.vb" />
+    <Compile Include="Microsoft\VisualBasic\FileIO\FileSystem.Portable.vb" />
     <Compile Include="Microsoft\VisualBasic\Globals.vb" />
     <Compile Include="Microsoft\VisualBasic\Devices\NetworkAvailableEventArgs.vb" />
     <Compile Include="Microsoft\VisualBasic\ComClassAttribute.vb" />
@@ -49,6 +50,11 @@
     <Compile Include="Microsoft\VisualBasic\ControlChars.vb" />
     <Compile Include="Microsoft\VisualBasic\CompilerServices\DoubleType.vb" />
     <Compile Include="Microsoft\VisualBasic\DateAndTime.vb" />
+    <Compile Include="Microsoft\VisualBasic\FileIO\FileIOPermission.vb" />
+    <Compile Include="Microsoft\VisualBasic\FileIO\FileSystem.vb" />
+    <Compile Include="Microsoft\VisualBasic\FileIO\MalformedLineException.vb" />
+    <Compile Include="Microsoft\VisualBasic\FileIO\SpecialDirectories.vb" />
+    <Compile Include="Microsoft\VisualBasic\FileIO\TextFieldParser.vb" />
     <Compile Include="Microsoft\VisualBasic\HideModuleNameAttribute.vb" />
     <Compile Include="Microsoft\VisualBasic\Information.vb" />
     <Compile Include="Microsoft\VisualBasic\Interaction.vb" />
@@ -57,23 +63,27 @@
     <Compile Include="Microsoft\VisualBasic\VariantType.vb" />
     <Compile Include="Microsoft\VisualBasic\VBFixedArrayAttribute.vb" />
     <Compile Include="Microsoft\VisualBasic\VBFixedStringAttribute.vb" />
+    <Compile Include="System\Security\Permissions\FileIOPermissionAccess.vb" />
   </ItemGroup>
   <ItemGroup Condition="'$(TargetGroup)' == 'netstandard1.3'">
-    <Reference Include="System.Runtime" />
+    <Reference Include="System" />
     <Reference Include="System.Collections" />
-    <Reference Include="System.Resources.ResourceManager" />
-    <Reference Include="System.Reflection" />
+    <Reference Include="System.Collections.Specialized" />
     <Reference Include="System.Diagnostics.Debug" />
     <Reference Include="System.Globalization" />
     <Reference Include="System.Dynamic.Runtime" />
-    <Reference Include="System.Linq.Expressions" />
-    <Reference Include="System.Reflection.TypeExtensions" />
-    <Reference Include="System.Runtime.Extensions" />
-    <Reference Include="System.Threading" />
-    <Reference Include="System.Runtime.InteropServices" />
-    <Reference Include="System.ObjectModel" />
-    <Reference Include="System.Reflection.Primitives" />
     <Reference Include="System.Linq" />
+    <Reference Include="System.Linq.Expressions" />
+    <Reference Include="System.ObjectModel" />
+    <Reference Include="System.Reflection" />
     <Reference Include="System.Reflection.Extensions" />
+    <Reference Include="System.Reflection.Primitives" />
+    <Reference Include="System.Reflection.TypeExtensions" />
+    <Reference Include="System.Resources.ResourceManager" />
+    <Reference Include="System.Runtime" />
+    <Reference Include="System.Runtime.Extensions" />
+    <Reference Include="System.Runtime.InteropServices" />
+    <Reference Include="System.Text" />
+    <Reference Include="System.Threading" />
   </ItemGroup>
 </Project>
