Allow CHOICE to contain AsnType elements

--- a/src/System.Security.Cryptography.Pkcs/src/System.Security.Cryptography.Pkcs.csproj
+++ b/src/System.Security.Cryptography.Pkcs/src/System.Security.Cryptography.Pkcs.csproj
@@ -279,6 +279,13 @@
       <Link>Common\System\Security\Cryptography\Asn1\Rc2CbcParameters.manual.cs</Link>
       <DependentUpon>$(CommonPath)\System\Security\Cryptography\Asn1\Rc2CbcParameters.xml</DependentUpon>
     </Compile>
+    <AsnXml Include="$(CommonPath)\System\Security\Cryptography\Asn1\SignedAttributesSet.xml">
+      <Link>Common\System\Security\Cryptography\Asn1\SignedAttributesSet.xml</Link>
+    </AsnXml>
+    <Compile Include="$(IntermediateOutputPath)asnxml\SignedAttributesSet.cs">
+      <Link>Common\System\Security\Cryptography\Asn1\SignedAttributesSet.cs</Link>
+      <DependentUpon>$(CommonPath)\System\Security\Cryptography\Asn1\SignedAttributesSet.xml</DependentUpon>
+    </Compile>
     <Compile Include="$(CommonPath)\System\Security\Cryptography\Asn1\SubjectPublicKeyInfoAsn.cs">
       <Link>Common\System\Security\Cryptography\Asn1\SubjectPublicKeyInfoAsn.cs</Link>
     </Compile>
